[gd_scene load_steps=2 format=3 uid="uid://shop_scene_001"]

[ext_resource type="Script" path="res://scripts/shop.gd" id="1"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.2, 1)

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="BackButton" type="Button" parent="TopBar"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "BACK"

[node name="Spacer" type="Control" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PointsLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Points: 0"

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 100.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
